fixed header h2 spacing

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ header h2 {
 	width: 200px; 
 	height: 18px; 
 	float: left;
-	text-indent: 26%;
+	text-indent: 28%;
 	white-space: nowrap;
 	overflow: visible;
 	font-size: 30px;
